objects/GiftCode_settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It will store the setting related to gift codes</description>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <label>Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heading_Label__c</fullName>
        <label>Heading Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <label>Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Heading_Label__c</fullName>
        <label>Sub Heading Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <description>This field will be used to uniquely identify the gift code record</description>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>GiftCode settings</label>
</CustomObject>